FIO-2771 FIO-2770 Fixed wizard button contrast and confirmation window text padding

--- a/src/sass/formio.form.scss
+++ b/src/sass/formio.form.scss
@@ -700,6 +700,10 @@ body.formio-dialog-open {
   margin: 0;
 }
 
+.formio-dialog-content [ref="dialogHeader"] {
+  padding-right: 15px;
+}
+
 .formio-placeholder {
   position:absolute;
   color: #999;
@@ -1365,6 +1369,8 @@ div[data-oembed-url] {
 
   .page-item.active .page-link {
     color: #fff;
+    background-color: #1C74D9;
+    border-color: #1C74D9;
   }
 }
 
